included earlab website

--- a/index.html
+++ b/index.html
@@ -95,6 +95,7 @@
                         <a href="https://www.researchgate.net/profile/Junzhe-Wang-4" target="_blank"><i class="fa-brands fa-researchgate"></i></a>
                         <a href="https://www.linkedin.com/in/junzhe-young-wang/" target="_blank"><i class="fa-brands fa-linkedin"></i></a>
                         <a href="https://github.com/young-oct" target="_blank"><i class="fa-brands fa-github"></i></a>
+                        <a href="https://earlab.ca/" target="_blank"><i class="fa-solid fa-ear-listen"></i></i></a>
                       </div>
                     </p>
                     </p>
