--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
                         href="https://profiles.rice.edu/faculty/ashok-veeraraghavan"
                         target="_blank"
                         style="white-space: nowrap"
-                        >Ashok Veeraraghavan</a
+                        >Dr. Ashok Veeraraghavan</a
                       >. &nbsp;&nbsp;My research interests include computational imaging and its biomedical
                       applications, with a focus on improving healthcare outcomes and making a tangible impact.
                     </p>
