--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@
                   <td class = "publication-contentbox">
                     <a href="https://journals.lww.com/otology-neurotology/citation/2024/07000/clinical_applications_of_handheld_middle_ear.24.aspx?context=latestarticles" target="_blank">
                         <span class="publication-title"
-                        >Clinical Applications of Handheld Middle Ear Optical Coherence Tomography (ME-OCT) With Live Volumetric Visualization: Clinical Applications of 4D ME-OCT</span>
+                        >Clinical Applications of Handheld Middle Ear Optical Coherence Tomography (ME-OCT) with Live Volumetric Visualization: Clinical Applications of 4D ME-OCT</span>
                       </a>
                      <div class="publication-authors-wrapper">
                     <a class="publication-authors" target="_blank" style="white-space: nowrap; font-weight: 900;" 
@@ -274,7 +274,7 @@
                 <td class = "publication-contentbox">
                   <a href="https://opg.optica.org/boe/fulltext.cfm?uri=boe-14-7-3152&id=531328" target="_blank">
                       <span class="publication-title"
-                      >Geometrically accurate real-time volumetric visualization of the middle ear using optical coherence tomography
+                      >Geometrically Accurate Real-time Volumetric Visualization of the Middle Ear Using Optical Coherence Tomography
                     </span>
                     </a>
                     <div class="publication-authors-wrapper">
