--- a/index.html
+++ b/index.html
@@ -329,7 +329,7 @@
                 <td class = "publication-contentbox">
                   <a href="https://journals.lww.com/otology-neurotology/abstract/2022/09000/transtympanic_visualization_of_cochlear_implant.17.aspx" target="_blank">
                       <span class="publication-title"
-                      >Transtympanic Visualization of Cochlear Implant Placement With Optical Coherence Tomography: A Pilot Study
+                      >Transtympanic Visualization of Cochlear Implant Placement with Optical Coherence Tomography: A Pilot Study
                     </span>
                     </a>
                     <div class="publication-authors-wrapper">
