--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
               <tbody>
                 <tr>
                   <td class="styled-td">
-                    <h2>Research</h2>
+                    <h2>Research (<sup>*</sup> denotes equal contribution)</h2>
                     <!-- <p>I'm interested in computational imaging, imaging through turbulence and machine learning.</p> -->
                   </td>
                 </tr>
@@ -186,9 +186,9 @@
                       </a>
                      <div class="publication-authors-wrapper">
                     <a class="publication-authors" target="_blank" style="white-space: nowrap; font-weight: 900;" 
-                    href="https://www.linkedin.com/in/junzhe-young-wang/">Junzhe Wang</a>,
+                    href="https://www.linkedin.com/in/junzhe-young-wang/">Junzhe Wang<sup>*</sup></a>,
                     <a class = "publication-authors" target="_blank" style="white-space: nowrap"
-                    href="https://www.linkedin.com/in/joshua-farrell-139940286/?trk=public_post-text&originalSubdomain=uk">Joshua Farrell</a>,
+                    href="https://www.linkedin.com/in/joshua-farrell-139940286/?trk=public_post-text&originalSubdomain=uk">Joshua Farrell<sup>*</sup></a>,
                     <a class = "publication-authors" target="_blank" style="white-space: nowrap"
                     href="https://www.linkedin.com/in/floor-couvreur-055963239/">Floor Couvreur</a>,
                     <a class = "publication-authors" target="_blank" style="white-space: nowrap"
