--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                         <h1 class="header-sub-title" id="word"></h1>
                       </div>
 
-                    <p class="name" style="text-align: center">I'm Junzhe "Young" Wang.</p>
+                    <p class="name">I'm Junzhe "Young" Wang | 王俊哲.</p>
                     
                     <p class="paragraph">
                       I’m a PhD student at
