--- a/index.html
+++ b/index.html
@@ -91,6 +91,7 @@
                     <p style="text-align:center">
                        <div class="contact_icons" > 
                         <a href="mailto:young.wang@rice.edu"><i class="fa-regular fa-envelope"></i></a>
+                        <a href="data/CV_YoungWang.pdf"><i class="fa-solid fa-file-contract"></i></a>
                         <a href="https://scholar.google.ca/citations?user=p6bdrCwAAAAJ&hl=en" target="_blank"><i class="fa-brands fa-google-scholar"></i></a>
                         <a href="https://www.researchgate.net/profile/Junzhe-Wang-4" target="_blank"><i class="fa-brands fa-researchgate"></i></a>
                         <a href="https://www.linkedin.com/in/junzhe-young-wang/" target="_blank"><i class="fa-brands fa-linkedin"></i></a>
