add href to _blank for CV

--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
                     </p>
                     <p style="text-align:center">
                        <div class="contact_icons" > 
-                        <a href="mailto:young.wang@rice.edu"><i class="fa-regular fa-envelope"></i></a>
+                        <a href="mailto:young.wang@rice.edu" target="_blank"><i class="fa-regular fa-envelope"></i></a>
                         <a href="data/CV_YoungWang.pdf"><i class="fa-solid fa-file-contract"></i></a>
                         <a href="https://scholar.google.ca/citations?user=p6bdrCwAAAAJ&hl=en" target="_blank"><i class="fa-brands fa-google-scholar"></i></a>
                         <a href="https://www.researchgate.net/profile/Junzhe-Wang-4" target="_blank"><i class="fa-brands fa-researchgate"></i></a>
