updated to ResearchGate

--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
                         <a href="mailto:young.wang@rice.edu" target="_blank"><i class="fa-regular fa-envelope"></i></a>
                         <a href="data/CV_YoungWang.pdf"><i class="fa-solid fa-file-contract"></i></a>
                         <a href="https://scholar.google.ca/citations?user=p6bdrCwAAAAJ&hl=en" target="_blank"><i class="fa-brands fa-google-scholar"></i></a>
-                        <a href="https://www.researchgate.net/profile/Junzhe-Wang-4" target="_blank"><i class="fa-brands fa-researchgate"></i></a>
+                        <a href="https://www.ResearchGate.net/profile/Junzhe-Wang-4" target="_blank"><i class="fa-brands fa-ResearchGate"></i></a>
                         <a href="https://www.linkedin.com/in/junzhe-young-wang/" target="_blank"><i class="fa-brands fa-linkedin"></i></a>
                         <a href="https://github.com/young-oct" target="_blank"><i class="fa-brands fa-github"></i></a>
                         <a href="https://earlab.ca/" target="_blank"><i class="fa-solid fa-ear-listen"></i></i></a>
@@ -208,9 +208,9 @@
                         <span class="publication-icon"><i class="fa fa-globe"></i></span>
                         <span class="publication-icontext">Project Page</span>
                       </a>
-                      <a href="https://www.researchgate.net/publication/381371657_Clinical_Applications_of_Handheld_Middle_Ear_Optical_Coherence_Tomography_ME-OCT_With_Live_Volumetric_Visualization_Clinical_Applications_of_4D_ME-OCT" target="_blank" class="publication-link">
-                        <span class="publication-icon"><i class="fa-brands fa-researchgate"></i></span>
-                        <span class="publication-icontext">Researchgate</span>
+                      <a href="https://www.ResearchGate.net/publication/381371657_Clinical_Applications_of_Handheld_Middle_Ear_Optical_Coherence_Tomography_ME-OCT_With_Live_Volumetric_Visualization_Clinical_Applications_of_4D_ME-OCT" target="_blank" class="publication-link">
+                        <span class="publication-icon"><i class="fa-brands fa-ResearchGate"></i></span>
+                        <span class="publication-icontext">ResearchGate</span>
                       </a>
                       <a href="publications/06_4D-ME-OCT/Clinical Applications of Handheld Middle Ear Optical Coherence Tomography (ME-OCT) With Live Volumetric Visualization_ Clinical Applications of 4D ME-OCT.pdf" target="_blank" class="publication-link">
                         <span class="publication-icon"><i class="fa-regular fa-file-pdf"></i></span>
@@ -221,7 +221,7 @@
                         <span class="publication-icontext">Video</span>
                       </a>
 
-                      <!-- <a href="https://www.researchgate.net/profile/Junzhe-Wang-4" target="_blank"><i class="fa-brands fa-researchgate"></i></a>
+                      <!-- <a href="https://www.ResearchGate.net/profile/Junzhe-Wang-4" target="_blank"><i class="fa-brands fa-ResearchGate"></i></a>
                       <a href="https://www.linkedin.com/in/junzhe-young-wang/" target="_blank"><i class="fa-brands fa-linkedin"></i></a>
                       <a href="https://github.com/young-oct" target="_blank"><i class="fa-brands fa-github"></i></a> -->
 
@@ -252,9 +252,9 @@
                       <span class="publication-icon"><i class="fa fa-globe"></i></span>
                       <span class="publication-icontext">Project Page</span>
                     </a>
-                    <a href="https://www.researchgate.net/publication/373603783_Improved_Middle_Ear_Imaging_with_Optical_Coherence_Tomography_for_Clinical_Otology" target="_blank" class="publication-link">
-                      <span class="publication-icon"><i class="fa-brands fa-researchgate"></i></span>
-                      <span class="publication-icontext">Researchgate</span>
+                    <a href="https://www.ResearchGate.net/publication/373603783_Improved_Middle_Ear_Imaging_with_Optical_Coherence_Tomography_for_Clinical_Otology" target="_blank" class="publication-link">
+                      <span class="publication-icon"><i class="fa-brands fa-ResearchGate"></i></span>
+                      <span class="publication-icontext">ResearchGate</span>
                     </a>
                     <a href="publications/05_thesis/JunzheWang2023.pdf" target="_blank" class="publication-link">
                       <span class="publication-icon"><i class="fa-regular fa-file-pdf"></i></span>
@@ -305,9 +305,9 @@
                       <span class="publication-icon"><i class="fa fa-globe"></i></span>
                       <span class="publication-icontext">Project Page</span>
                     </a>
-                    <a href="https://www.researchgate.net/publication/370965576_Geometrically_accurate_real-time_volumetric_visualization_of_the_middle_ear_using_optical_coherence_tomography" target="_blank" class="publication-link">
-                      <span class="publication-icon"><i class="fa-brands fa-researchgate"></i></span>
-                      <span class="publication-icontext">Researchgate</span>
+                    <a href="https://www.ResearchGate.net/publication/370965576_Geometrically_accurate_real-time_volumetric_visualization_of_the_middle_ear_using_optical_coherence_tomography" target="_blank" class="publication-link">
+                      <span class="publication-icon"><i class="fa-brands fa-ResearchGate"></i></span>
+                      <span class="publication-icontext">ResearchGate</span>
                     </a>
                     <a href="publications/04_geometric/boe-14-7-3152.pdf" target="_blank" class="publication-link">
                       <span class="publication-icon"><i class="fa-regular fa-file-pdf"></i></span>
@@ -362,9 +362,9 @@
                       <span class="publication-icon"><i class="fa fa-globe"></i></span>
                       <span class="publication-icontext">Project Page</span>
                     </a>
-                    <a href="https://www.researchgate.net/publication/363187871_Transtympanic_Visualization_of_Cochlear_Implant_Placement_With_Optical_Coherence_Tomography_A_Pilot_Study" target="_blank" class="publication-link">
-                      <span class="publication-icon"><i class="fa-brands fa-researchgate"></i></span>
-                      <span class="publication-icontext">Researchgate</span>
+                    <a href="https://www.ResearchGate.net/publication/363187871_Transtympanic_Visualization_of_Cochlear_Implant_Placement_With_Optical_Coherence_Tomography_A_Pilot_Study" target="_blank" class="publication-link">
+                      <span class="publication-icon"><i class="fa-brands fa-ResearchGate"></i></span>
+                      <span class="publication-icontext">ResearchGate</span>
                     </a>
                     <a href="publications/03_CI/00129492-202209000-00017.pdf" target="_blank" class="publication-link">
                       <span class="publication-icon"><i class="fa-regular fa-file-pdf"></i></span>
@@ -419,9 +419,9 @@
                       <span class="publication-icon"><i class="fa fa-globe"></i></span>
                       <span class="publication-icontext">Project Page</span>
                     </a>
-                    <a href="https://www.researchgate.net/publication/359003818_Optical_Clearing_Agents_for_Optical_Imaging_Through_Cartilage_Tympanoplasties_A_Preclinical_Feasibility_Study" target="_blank" class="publication-link">
-                      <span class="publication-icon"><i class="fa-brands fa-researchgate"></i></span>
-                      <span class="publication-icontext">Researchgate</span>
+                    <a href="https://www.ResearchGate.net/publication/359003818_Optical_Clearing_Agents_for_Optical_Imaging_Through_Cartilage_Tympanoplasties_A_Preclinical_Feasibility_Study" target="_blank" class="publication-link">
+                      <span class="publication-icon"><i class="fa-brands fa-ResearchGate"></i></span>
+                      <span class="publication-icontext">ResearchGate</span>
                     </a>
                     <a href="publications/02_OCA/00129492-202204000-00019.pdf" target="_blank" class="publication-link">
                       <span class="publication-icon"><i class="fa-regular fa-file-pdf"></i></span>
@@ -462,9 +462,9 @@
                       <span class="publication-icon"><i class="fa fa-globe"></i></span>
                       <span class="publication-icontext">Project Page</span>
                     </a>
-                    <a href="https://www.researchgate.net/publication/358520162_Convolutional_dictionary_learning_for_blind_deconvolution_of_optical_coherence_tomography_images" target="_blank" class="publication-link">
-                      <span class="publication-icon"><i class="fa-brands fa-researchgate"></i></span>
-                      <span class="publication-icontext">Researchgate</span>
+                    <a href="https://www.ResearchGate.net/publication/358520162_Convolutional_dictionary_learning_for_blind_deconvolution_of_optical_coherence_tomography_images" target="_blank" class="publication-link">
+                      <span class="publication-icon"><i class="fa-brands fa-ResearchGate"></i></span>
+                      <span class="publication-icontext">ResearchGate</span>
                     </a>
                     <a href="publications/01_blind/boe-13-4-1834.pdf" target="_blank" class="publication-link">
                       <span class="publication-icon"><i class="fa-regular fa-file-pdf"></i></span>
