--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
       gtag('config', 'G-VKP20HR260');
     </script>
-    
+
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 
     <title>Junzhe "Young" Wang</title>
@@ -62,8 +62,9 @@
                         <h1 class="header-sub-title" id="word"></h1>
                       </div>
 
-                    <p class="name">I'm Junzhe "Young" Wang | 王俊哲.</p>
-                    
+                    <p class="name">
+                        I'm <span style="white-space: nowrap;">Junzhe "Young" Wang</span> | <span style="white-space: nowrap;">王俊哲</span>.
+                    </p>                    
                     <p class="paragraph">
                       I’m a PhD student at
                       <a href="https://www.rice.edu/" target="_blank" style="white-space: nowrap">Rice University</a>, I
