--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
     <link rel="shortcut icon" href="images/favicon/favicon.ico" type="image/x-icon" />
     <link rel="stylesheet" type="text/css" href="stylesheet.css" />
     <link rel="stylesheet" href="mediaqueries.css">
+    <link rel="icon" type="image/png" href="images/00_icon.png" />
     <script
     src="https://kit.fontawesome.com/68e9d88b8c.js"
     crossorigin="anonymous"
