--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
                       </div>
 
                     <p class="name">
-                        I'm <span style="white-space: nowrap;">Junzhe "Young" Wang</span> | <span style="white-space: nowrap;">王俊哲</span>.
+                        I'm <span style="white-space: nowrap;">Junzhe "Young" Wang</span><span style="white-space: nowrap;"> | 王俊哲</span>.
                     </p>                    
                     <p class="paragraph">
                       I’m a PhD student at
