changed comma location

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
                       </div>
 
                     <p class="name">
-                      I'm <span class="name-text">Junzhe "Young" Wang</span><span class="name-text"> | 王俊哲</span>.
+                      I'm <span class="name-text">Junzhe "Young" Wang</span><span class="name-text"> | 王俊哲.</span>
                     </p>                 
                     <p class="paragraph">
                       I’m a PhD student at
