included a features 1. hover and enlarge picture 2. click and zoom picutre

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     src="https://kit.fontawesome.com/68e9d88b8c.js"
     crossorigin="anonymous"
   ></script>
-  <script src="text.js"></script>
+  <script src="script.js"></script>
 
   </head>
 
@@ -114,13 +114,12 @@
                     </p>
                   </td>
                   <td style="padding: 2.5%; width: 40%; max-width: 40%">
-                    <a href="images/08_Young.jpg"
-                      ><img
+                    <img
                         style="width: 100%; max-width: 100%; object-fit: cover; border-radius: 50%"
                         alt="profile photo"
                         src="images/08_Young.jpg"
                         class="hoverZoomLink"
-                    /></a>
+                    />
                   </td>
                 </tr>
               </tbody>
