fixed profile when screen gets small its changes position and size

--- a/index.html
+++ b/index.html
@@ -42,10 +42,18 @@
                       <div class="hello-container">
                         <h1 class="header-sub-title" id="word"></h1>
                       </div>
-
                     <p class="name">
+                    <!-- PROFILE PICTURE - MOVED HERE FOR SMALL SCREENS -->
+                    <div class="profile-image-container small-screen-profile-image">
+                      <img class = "profile-image"
+                          alt="profile photo"
+                          src="images/08_Young.jpg"
+                          class="hoverZoomLink"
+                      />
+                  </div>               
                       I'm <span class="name-text">Junzhe "Young" Wang</span><span class="name-text"> | 王俊哲.</span>
-                    </p>                 
+                    </p>
+
                     <p class="paragraph">
                       I’m a PhD student at
                       <a href="https://www.rice.edu/" target="_blank" class="paragraph-name-nobreak">Rice University</a>, I
@@ -92,7 +100,7 @@
                     </p>
                     </p>
                   </td>
-                  <td class="profile-image-container">
+                  <td class="profile-image-container large-screen-profile-image">
                     <img class = "profile-image"
                         alt="profile photo"
                         src="images/08_Young.jpg"
