fixed profile resize setting

--- a/index.html
+++ b/index.html
@@ -42,6 +42,14 @@
                       <div class="hello-container">
                         <h1 class="header-sub-title" id="word"></h1>
                       </div>
+                    <!-- PROFILE PICTURE - MOVED HERE FOR SMALL SCREENS -->
+                    <div class="profile-image-container small-screen-profile-image">
+                      <img class = "profile-image"
+                          alt="profile photo"
+                          src="images/08_Young.jpg"
+                          class="hoverZoomLink"
+                      />
+                  </div>
                     <p class="name">
                       I'm <span class="name-text">Junzhe "Young" Wang</span><span class="name-text"> | 王俊哲.</span>
                     </p>
