--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
                         <a href="https://scholar.google.ca/citations?user=p6bdrCwAAAAJ&hl=en" target="_blank"><i class="fa-brands fa-google-scholar"></i></a>
                         <a href="https://www.researchgate.net/profile/Junzhe-Wang-4" target="_blank"><i class="fa-brands fa-researchgate"></i></a>
                         <a href="https://www.linkedin.com/in/junzhe-young-wang/" target="_blank"><i class="fa-brands fa-linkedin"></i></a>
-                        <a href="https://github.com/young-oct" target="_blank"><i class="fa-brands fa-github"></i></a>
+                        <a href="https://github.com/Young-JZ-Wang" target="_blank"><i class="fa-brands fa-github"></i></a>
                         <a href="https://earlab.ca/" target="_blank"><i class="fa-solid fa-ear-listen"></i></i></a>
                       </div>
                     </p>
