included new publication

--- a/index.html
+++ b/index.html
@@ -161,12 +161,73 @@
             </table>
             <table class="publication-table">
               <tbody>
+    <!-- publication 7: OCT/CT fusion-->
+    <tr>
+      <td class="publication-imagebox large-screen-publication-imagebox">
+        <img class="publication-image" src="images/07_thumbnail.jpg" />
+      </td>
+      <td class="publication-contentbox">
+        <a href="https://jamanetwork.com/journals/jamaotolaryngology/article-abstract/2832142"
+            target="_blank">
+            <span class="publication-title">Fusion of Middle Ear Optical Coherence Tomography and Computed Tomography</span>
+        </a>
+        <div class="publication-authors-wrapper">
+            <a class="publication-authors-highlight" target="_blank"
+                href="https://www.linkedin.com/in/junzhe-young-wang/">Junzhe Wang<sup>*</sup></a>,
+            <a class="publication-authors" target="_blank"
+                href="https://www.linkedin.com/in/floor-couvreur-055963239/">Floor Couvreur</a>,
+                <a class="publication-authors" target="_blank"
+                href="https://www.linkedin.com/in/joshua-farrell-139940286/?trk=public_post-text&originalSubdomain=uk">Joshua Farrell<sup>*</sup></a>,
+                <a class="publication-authors" target="_blank"
+                href="https://www.linkedin.com/in/reshma-ghedia-6804a8265/?originalSubdomain=uk">Reshma Ghedia<sup>*</sup></a>,
+            <a class="publication-authors" target="_blank"
+                href="https://medicine.dal.ca/departments/department-sites/surgery/divisions/otolaryngology/our-people/faculty/nael-shoman.html">Nael
+                Shoman</a>,
+            <a class="publication-authors" target="_blank"
+                href="https://medicine.dal.ca/departments/department-sites/surgery/divisions/otolaryngology/our-people/faculty/david-p--morris.html">David
+                P Morris</a>,
+            <a class="publication-authors" target="_blank"
+                href="https://www.dal.ca/faculty/school-biomedical-engineering/our-people/our-faculty-atok/RobAdamson.html">Robert
+                BA Adamson</a>
+        </div>
+            <div class="publication-imagebox-small">
+                <img class="publication-image" src="images/06_thumbnail.jpg" />
+              </div>
+        <span class="publication-journal-container">  <!-- Added container -->
+          <span class="publication-journal">Otology & Neurotology</span>, <span class="publication-year">2024</span>
+        </span>
+        <div class="publication-links">
+            <a href="https://earlab.ca/" target="_blank" class="publication-link">
+                <span class="publication-icon"><i class="fa fa-globe"></i></span>
+                <span class="publication-icontext">Project Page</span>
+            </a>
+            <a href="https://www.researchgate.net/publication/381371657_Clinical_Applications_of_Handheld_Middle_Ear_Optical_Coherence_Tomography_ME-OCT_With_Live_Volumetric_Visualization_Clinical_Applications_of_4D_ME-OCT"
+                target="_blank" class="publication-link">
+                <span class="publication-icon"><i class="fa-brands fa-researchgate"></i></span>
+                <span class="publication-icontext">ResearchGate</span>
+            </a>
+            <a href="publications/06_4D-ME-OCT/Clinical Applications of Handheld Middle Ear Optical Coherence Tomography (ME-OCT) With Live Volumetric Visualization_ Clinical Applications of 4D ME-OCT.pdf"
+                target="_blank" class="publication-link">
+                <span class="publication-icon"><i class="fa-regular fa-file-pdf"></i></span>
+                <span class="publication-icontext">PDF</span>
+            </a>
+            <a href="4D ME-OCT/06_540p.mp4" target="_blank" class="publication-link">
+                <span class="publication-icon"><i class="fa-solid fa-film"></i></span>
+                <span class="publication-icontext">Video</span>
+            </a>
+        </div>
+        <p class="publication-abstract">
+            A custom-built OCT system enabling continuous 4D imaging of the middle ear for clinical applications such as the
+            Valsalva maneuver, partial ossicular prosthesis (PORP), and cochlear implant (CI) surgeries.
+        </p>
+    </td>
+  </tr>
    <!-- publication 6: 4D OCT-->
    <tr>
       <td class="publication-imagebox large-screen-publication-imagebox">
         <img class="publication-image" src="images/06_thumbnail.jpg" />
       </td>
-    <td class="publication-contentbox">
+      <td class="publication-contentbox">
         <a href="https://journals.lww.com/otology-neurotology/citation/2024/07000/clinical_applications_of_handheld_middle_ear.24.aspx?context=latestarticles"
             target="_blank">
             <span class="publication-title">Clinical Applications of Handheld Middle Ear Optical Coherence Tomography (ME-OCT) with Live Volumetric Visualization: Clinical Applications of 4D ME-OCT</span>
