--- a/index.html
+++ b/index.html
@@ -191,29 +191,25 @@
                 BA Adamson</a>
         </div>
             <div class="publication-imagebox-small">
-                <img class="publication-image" src="images/06_thumbnail.jpg" />
+                <img class="publication-image" src="images/07_thumbnail.jpg" />
               </div>
         <span class="publication-journal-container">  <!-- Added container -->
-          <span class="publication-journal">Otology & Neurotology</span>, <span class="publication-year">2024</span>
+          <span class="publication-journal">JAMA Otolaryngology-Head & Neck Surgery</span>, <span class="publication-year">2025</span>
         </span>
         <div class="publication-links">
             <a href="https://earlab.ca/" target="_blank" class="publication-link">
                 <span class="publication-icon"><i class="fa fa-globe"></i></span>
                 <span class="publication-icontext">Project Page</span>
             </a>
-            <a href="https://www.researchgate.net/publication/381371657_Clinical_Applications_of_Handheld_Middle_Ear_Optical_Coherence_Tomography_ME-OCT_With_Live_Volumetric_Visualization_Clinical_Applications_of_4D_ME-OCT"
+            <a href="https://www.researchgate.net/publication/384329618_Fusion_of_middle_ear_optical_coherence_tomography_and_computed_tomography_in_three_ears"
                 target="_blank" class="publication-link">
                 <span class="publication-icon"><i class="fa-brands fa-researchgate"></i></span>
                 <span class="publication-icontext">ResearchGate</span>
             </a>
-            <a href="publications/06_4D-ME-OCT/Clinical Applications of Handheld Middle Ear Optical Coherence Tomography (ME-OCT) With Live Volumetric Visualization_ Clinical Applications of 4D ME-OCT.pdf"
+            <a href="https://www.medrxiv.org/content/10.1101/2024.09.23.24314125v1.full.pdf"
                 target="_blank" class="publication-link">
                 <span class="publication-icon"><i class="fa-regular fa-file-pdf"></i></span>
                 <span class="publication-icontext">PDF</span>
-            </a>
-            <a href="4D ME-OCT/06_540p.mp4" target="_blank" class="publication-link">
-                <span class="publication-icon"><i class="fa-solid fa-film"></i></span>
-                <span class="publication-icontext">Video</span>
             </a>
         </div>
         <p class="publication-abstract">
