--- a/index.html
+++ b/index.html
@@ -213,8 +213,9 @@
             </a>
         </div>
         <p class="publication-abstract">
-            A custom-built OCT system enabling continuous 4D imaging of the middle ear for clinical applications such as the
-            Valsalva maneuver, partial ossicular prosthesis (PORP), and cochlear implant (CI) surgeries.
+          In this case series including 3 patients, OCT and CT imaging produced complementary 
+          diagnostic information, with CT offering unobstructed images of bony anatomy and OCT providing the 
+          ability to visualize soft tissue.
         </p>
     </td>
   </tr>
