fixed equal contribution

--- a/index.html
+++ b/index.html
@@ -175,11 +175,11 @@
             <a class="publication-authors-highlight" target="_blank"
                 href="https://www.linkedin.com/in/junzhe-young-wang/">Junzhe Wang<sup>*</sup></a>,
             <a class="publication-authors" target="_blank"
-                href="https://www.linkedin.com/in/floor-couvreur-055963239/">Floor Couvreur</a>,
+                href="https://www.linkedin.com/in/floor-couvreur-055963239/">Floor Couvreur<sup>*</sup></a>,
                 <a class="publication-authors" target="_blank"
-                href="https://www.linkedin.com/in/joshua-farrell-139940286/?trk=public_post-text&originalSubdomain=uk">Joshua Farrell<sup>*</sup></a>,
+                href="https://www.linkedin.com/in/joshua-farrell-139940286/?trk=public_post-text&originalSubdomain=uk">Joshua Farrell</a>,
                 <a class="publication-authors" target="_blank"
-                href="https://www.linkedin.com/in/reshma-ghedia-6804a8265/?originalSubdomain=uk">Reshma Ghedia<sup>*</sup></a>,
+                href="https://www.linkedin.com/in/reshma-ghedia-6804a8265/?originalSubdomain=uk">Reshma Ghedia</a>,
             <a class="publication-authors" target="_blank"
                 href="https://medicine.dal.ca/departments/department-sites/surgery/divisions/otolaryngology/our-people/faculty/nael-shoman.html">Nael
                 Shoman</a>,
